# yellow_press_rate

./: README.md  articles_handlers.py  main.py  pyproject.toml  server.py  text_tools.py
adapters/: html_tools.py  inosmi_ru.py
